# B.O.G-basic-name-search-tool

./: .gitignore  LICENSE  Pipfile  README.md  bun.lockb  dci.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
2023/December/: 1938169700.html
2024/January/: -62836608.html  1084084392.html  133628990.html  1426841998.html  1479326112.html  1553723148.html  1822841312.html  486188301.html  652105392.html
docs/: index.md
js/sites/: dci-palestine.org.js
js/tests/: clean-html.js
js/utils/: headless.js
martyr_search_tool/: example.toml  main.py
martyr_search_tool/sites/: agents.json  airwars.py  aitnumbers.py  base_site.py  let_them_grow_up.py  our_ghaza.py  twitter.py
sites/: dci-palestine.org.js  dci-palestine.org.ts
src/: example.toml  name_lookup.js  requirments.txt  twitter_search.py
test/: llm-payload.json  page1.json  testy.json
